--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,8 @@
-pip install Django
-py -m pip install --upgrade pip
-pip install djangorestframework django-cors-headers
+Django==4.2.5
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+django-allauth==0.55.0
+django-cors-headers==3.15.0
+social-auth-app-django==5.1.0
+requests==2.31.0
+Pillow==9.4.0
